--- a/Source/WebCore/WebCore.exp.in
+++ b/Source/WebCore/WebCore.exp.in
@@ -2814,4 +2814,5 @@ __ZN7WebCore16UserMediaRequest22userMediaAccessGrantedEv
 __ZN7WebCore16UserMediaRequest21userMediaAccessDeniedEv
 __ZN7WebCore18provideUserMediaToEPNS_4PageEPNS_15UserMediaClientE
 __ZNK7WebCore16UserMediaRequest14securityOriginEv
+__ZN7WebCore21MockMediaStreamCenter29registerMockMediaStreamCenterEv
 #endif
